add link to resume and githubs for projects

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm gay, vegan, and a board game enthusiast.
                     </div>
+                    <div class="mt-3 col-lg-12 text-dark">
+                        <a href="./Assets/Files/Resume.web.pdf">View my resume</a>
+                    </div>
                 </div>
 
             </div> <!-- card body-->
