--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-        integrity="" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity=""
+        crossorigin="anonymous" />
     <title>Portfolio</title>
 </head>
 
@@ -45,46 +45,61 @@
                             <div class="row">
 
                                 <div class="col-lg-4 mb-5">
-                                    <div class="card-img-container">
-                                        <img src="Assets/Images/covidcanidoit.png" class="card-img-top" alt="screenshot">
-                                    </div>
-                                    <div class="card-body bg-dark">
-                                        <a href="https://covidcanidoit.com/" class="stretched-link">
+                                    <div class="" style="transform: rotate(0)">
+                                        <div class="bg-dark p-4">
                                             <h3 class="card-title text-light">Covid - Can I do it?</h3>
                                             <h6 class="card-subtitle text-light">Risk Assessment App</h6>
-                                        </a>
+                                        </div>
+                                        <a href="https://covidcanidoit.com/" class="stretched-link"><img src="Assets/Images/covidcanidoit.png"
+                                                class="card-img-top" alt="screenshot"></a>
                                     </div>
+                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                            href="https://github.com/covidcanidoit/covidcanidoit" class="text-light stretched-link"><i
+                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
                                 <div class="col-lg-4 mb-5">
-                                    <img src="Assets/Images/purplepages.png" class="card-img-top" alt="screenshot">
-                                    <div class="card-body bg-dark">
-                                        <a href="https://reptile18.github.io/Purple-Pages/index.html"
-                                            class="stretched-link">
+                                    <div class="card-radius" style="transform: rotate(0)">
+                                        <div class="bg-dark p-4">
                                             <h3 class="card-title text-light">Purple Pages</h3>
                                             <h6 class="card-subtitle text-light">Web Entertainment App</h6>
+                                        </div>
+                                        <a href="https://reptile18.github.io/Purple-Pages/index.html" class="stretched-link">
+                                            <img src="Assets/Images/purplepages.png"
+                                                class="card-img-top" alt="screenshot">
                                         </a>
                                     </div>
+                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Purple-Pages" class="text-light stretched-link"><i
+                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
+
                                 <div class="col-lg-4 mb-5">
-                                    <img src="Assets/Images/workdayscheduler.png" class="card-img-top border"
-                                        alt="screenshot">
-                                    <div class="card-body bg-dark">
-                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
-                                            class="stretched-link">
+                                    <div class="card-radius" style="transform: rotate(0)">
+                                        <div class="bg-dark p-4">
                                             <h3 class="card-title text-light">Work Day Scheduler</h3>
                                             <h6 class="card-subtitle text-light">Time Keeping App</h6>
-                                        </a>
+                                        </div>
+                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html" class="stretched-link"><img src="Assets/Images/workdayscheduler.png"
+                                                class="card-img-top" alt="screenshot"></a>
                                     </div>
+                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Work-Day-Scheduler" class="text-light stretched-link"><i
+                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
+
                                 <div class="col-lg-4 mb-5">
-                                    <img src="Assets/Images/weatherdashboard.png" class="card-img-top" alt="screenshot">
-                                    <div class="card-body bg-dark">
-                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
+                                    <div class="card-radius" style="transform: rotate(0)">
+                                        <div class="bg-dark p-4">
                                             <h3 class="card-title text-light">Weather Dashboard</h3>
                                             <h6 class="card-subtitle text-light">Local Weather App</h6>
-                                        </a>
+                                        </div>
+                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link"><img src="Assets/Images/weatherdashboard.png"
+                                                class="card-img-top" alt="screenshot"></a>
                                     </div>
+                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Weather-Dashboard" class="text-light stretched-link"><i
+                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
                             </div>
