add contact info

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-        integrity="" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity=""
+        crossorigin="anonymous" />
     <title>About Me</title>
 </head>
 
@@ -44,13 +44,29 @@
                     </div>
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm a software developer. I'm fluent in HTML/CSS, Javascript, Intersystems Caché, VB6, and
-                        GDScript. My education was mostly in Java with some C++ and Python thrown in.
+                        GDScript. My education was mostly in Java with some C++ and Python thrown in. I learn new 
+                        technologies very quickly. 
                     </div>
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm gay, vegan, and a board game enthusiast.
                     </div>
-                    <div class="mt-3 col-lg-12 text-dark">
-                        <a href="./Assets/Files/Resume.web.pdf">View my resume</a>
+                    <div class="mt-3 text-dark">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="./Assets/Files/Resume.web.pdf" class="nav-link"><i class="fas fa-file text-dark"></i> View my
+                                    resume</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mailto:reptile18@gmail.com" class="nav-link"><i class="fas fa-envelope text-dark"></i> Email
+                                    Me</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="tel:619-564-1623" class="nav-link"><i class="fas fa-phone text-dark"></i> Call Me</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+
                     </div>
                 </div>
 
