--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm a software developer. I'm fluent in HTML/CSS, Javascript, Intersystems Caché, VB6, and
                         GDScript. My education was mostly in Java with some C++ and Python thrown in. I learn new 
-                        technologies very quickly. 
+                        technologies very quickly, I'm very good and finding and fixing bugs, I'm extremely flexible,
+                        and won't give up until everything is in tip-tip shape.
                     </div>
                     <div class="mt-3 col-lg-12 text-dark">
-                        I'm gay, vegan, and a board game enthusiast.
+                        I'm gay, vegan, father to two cats, and a board game enthusiast.
                     </div>
                     <div class="mt-3 text-dark">
                         <ul class="nav">
@@ -97,7 +98,8 @@
                 </a>
             </h3>
         </div>
-        <div class="footer-copyright text-center py-3">© Copyright</div>
+        <hr>
+        <div class="footer-copyright text-center py-1">© Copyright</div>
     </footer>
 </body>
 
