fix image ratios breaking

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm a software developer. I'm fluent in HTML/CSS, Javascript, Intersystems Caché, VB6, and
                         GDScript. My education was mostly in Java with some C++ and Python thrown in. I learn new 
-                        technologies very quickly, I'm very good and finding and fixing bugs, I'm extremely flexible,
-                        and won't give up until everything is in tip-tip shape.
+                        technologies very quickly, I'm very driven, I'm very good and finding and fixing bugs, 
+                        I'm extremely flexible, and I don't give up until everything is in tip-tip shape.
                     </div>
                     <div class="mt-3 col-lg-12 text-dark">
                         I'm gay, vegan, father to two cats, and a board game enthusiast.
