--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,16 @@
                                             <h3 class="card-title text-light">Covid - Can I do it?</h3>
                                             <h6 class="card-subtitle text-light">Risk Assessment App</h6>
                                         </div>
-                                        <a href="https://covidcanidoit.com/" class="stretched-link"><img src="Assets/Images/covidcanidoit.png"
-                                                class="card-img-top" alt="screenshot"></a>
+                                        <a href="https://covidcanidoit.com/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                                <img src="Assets/Images/covidcanidoit.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="card-body bg-dark" style="transform: rotate(0)"><a
-                                            href="https://github.com/covidcanidoit/covidcanidoit" class="text-light stretched-link"><i
+                                            href="https://github.com/covidcanidoit/covidcanidoit"
+                                            class="text-light stretched-link"><i
                                                 class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
@@ -64,13 +69,17 @@
                                             <h3 class="card-title text-light">Purple Pages</h3>
                                             <h6 class="card-subtitle text-light">Web Entertainment App</h6>
                                         </div>
-                                        <a href="https://reptile18.github.io/Purple-Pages/index.html" class="stretched-link">
-                                            <img src="Assets/Images/purplepages.png"
-                                                class="card-img-top" alt="screenshot">
+                                        <a href="https://reptile18.github.io/Purple-Pages/index.html"
+                                            class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                                <img src="Assets/Images/purplepages.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
                                         </a>
                                     </div>
                                     <div class="card-body bg-dark" style="transform: rotate(0)"><a
-                                            href="https://github.com/reptile18/Purple-Pages" class="text-light stretched-link"><i
+                                            href="https://github.com/reptile18/Purple-Pages"
+                                            class="text-light stretched-link"><i
                                                 class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
@@ -80,11 +89,17 @@
                                             <h3 class="card-title text-light">Work Day Scheduler</h3>
                                             <h6 class="card-subtitle text-light">Time Keeping App</h6>
                                         </div>
-                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html" class="stretched-link"><img src="Assets/Images/workdayscheduler.png"
-                                                class="card-img-top" alt="screenshot"></a>
+                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
+                                            class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                                <img src="Assets/Images/workdayscheduler.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="card-body bg-dark" style="transform: rotate(0)"><a
-                                            href="https://github.com/reptile18/Work-Day-Scheduler" class="text-light stretched-link"><i
+                                            href="https://github.com/reptile18/Work-Day-Scheduler"
+                                            class="text-light stretched-link"><i
                                                 class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
@@ -94,11 +109,16 @@
                                             <h3 class="card-title text-light">Weather Dashboard</h3>
                                             <h6 class="card-subtitle text-light">Local Weather App</h6>
                                         </div>
-                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link"><img src="Assets/Images/weatherdashboard.png"
-                                                class="card-img-top" alt="screenshot"></a>
+                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                                <img src="Assets/Images/weatherdashboard.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="card-body bg-dark" style="transform: rotate(0)"><a
-                                            href="https://github.com/reptile18/Weather-Dashboard" class="text-light stretched-link"><i
+                                            href="https://github.com/reptile18/Weather-Dashboard"
+                                            class="text-light stretched-link"><i
                                                 class="fab fa-github-square text-light"></i> View on Github</a></div>
                                 </div>
 
