--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,23 @@
     <title>Portfolio</title>
 </head>
 
-<body class="bg-dark">
-    <header>
+<body class="bg-dark codingBackground">
+    <header class="pageBar">
         <div class="d-flex justify-content-center">
-            <h1 class="bg-dark text-light">Johnny Li</h1>
+            <h1 class="py-1">Johnny Li</h1>
         </div>
     </header>
-    <nav class="nav navbar-light bg-light justify-content-center">
-        <a class="nav-link text-dark" href="index.html">About Me</a>
-        <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
-        <a class="nav-link text-dark" href="contact.html">Contact</a>
+    <nav class="nav pageBar font-weight-bold justify-content-center">
+        <a class="nav-link " href="index.html">About Me</a>
+        <a class="nav-link " href="portfolio.html">Portfolio</a>
+        <a class="nav-link " href="contact.html">Contact</a>
     </nav>
     <main class="container">
-        <article class="card mt-4">
+        <article class="card mt-4 mainCard">
             <div class="card-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="text-dark card-title">Portfolio</h2>
+                        <h2 class=" card-title">Portfolio</h2>
                         <hr>
                     </div>
                 </div>
@@ -44,82 +44,82 @@
                         <div class="container">
                             <div class="row">
 
-                                <div class="col-lg-4 mb-5">
-                                    <div class="" style="transform: rotate(0)">
-                                        <div class="bg-dark p-4">
-                                            <h3 class="card-title text-light">Covid - Can I do it?</h3>
-                                            <h6 class="card-subtitle text-light">Risk Assessment App</h6>
+                                <div class=" col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Covid - Can I do it?</h3>
+                                            <h6 class="card-subtitle ">Risk Assessment App</h6>
                                         </div>
                                         <a href="https://covidcanidoit.com/" class="stretched-link">
-                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                            <div class="card-img-container d-flex justify-content-center ">
                                                 <img src="Assets/Images/covidcanidoit.png" class="card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                    <div class="card-body miniCard card-bottom-radius" style="transform: rotate(0)"><a
                                             href="https://github.com/covidcanidoit/covidcanidoit"
-                                            class="text-light stretched-link"><i
-                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
-                                <div class="col-lg-4 mb-5">
-                                    <div class="card-radius" style="transform: rotate(0)">
-                                        <div class="bg-dark p-4">
-                                            <h3 class="card-title text-light">Purple Pages</h3>
-                                            <h6 class="card-subtitle text-light">Web Entertainment App</h6>
+                                <div class=" col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Purple Pages</h3>
+                                            <h6 class="card-subtitle ">Web Entertainment App</h6>
                                         </div>
                                         <a href="https://reptile18.github.io/Purple-Pages/index.html"
                                             class="stretched-link">
-                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                            <div class="card-img-container d-flex justify-content-center ">
                                                 <img src="Assets/Images/purplepages.png" class="card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Purple-Pages"
-                                            class="text-light stretched-link"><i
-                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                                 <div class="col-lg-4 mb-5">
-                                    <div class="card-radius" style="transform: rotate(0)">
-                                        <div class="bg-dark p-4">
-                                            <h3 class="card-title text-light">Work Day Scheduler</h3>
-                                            <h6 class="card-subtitle text-light">Time Keeping App</h6>
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Work Day Scheduler</h3>
+                                            <h6 class="card-subtitle ">Time Keeping App</h6>
                                         </div>
                                         <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
                                             class="stretched-link">
-                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                            <div class="card-img-container d-flex justify-content-center ">
                                                 <img src="Assets/Images/workdayscheduler.png" class="card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Work-Day-Scheduler"
-                                            class="text-light stretched-link"><i
-                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                                 <div class="col-lg-4 mb-5">
-                                    <div class="card-radius" style="transform: rotate(0)">
-                                        <div class="bg-dark p-4">
-                                            <h3 class="card-title text-light">Weather Dashboard</h3>
-                                            <h6 class="card-subtitle text-light">Local Weather App</h6>
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Weather Dashboard</h3>
+                                            <h6 class="card-subtitle ">Local Weather App</h6>
                                         </div>
                                         <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
-                                            <div class="card-img-container d-flex justify-content-center bg-dark">
+                                            <div class="card-img-container d-flex justify-content-center ">
                                                 <img src="Assets/Images/weatherdashboard.png" class="card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body bg-dark" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Weather-Dashboard"
-                                            class="text-light stretched-link"><i
-                                                class="fab fa-github-square text-light"></i> View on Github</a></div>
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                             </div>
@@ -129,27 +129,27 @@
             </div>
         </article>
     </main>
-    <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
+    <footer class="fixed-bottom page-footer pageBar font-small ">
         <div class="d-flex justify-content-center">
             <h3 class="mt-3">
                 <a class="mr-3" href="https://github.com/reptile18">
-                    <i class="fab fa-github-square text-dark"></i>
+                    <i class="fab fa-github-square "></i>
                 </a>
 
                 <a class="mr-3" href="https://www.linkedin.com/in/johnny-li-031b949/">
-                    <i class="fab fa-linkedin text-dark"></i>
+                    <i class="fab fa-linkedin "></i>
                 </a>
 
                 <a class="mr-3" href="https://www.facebook.com/johnny.li.144">
-                    <i class="fab fa-facebook-square text-dark"></i>
+                    <i class="fab fa-facebook-square "></i>
                 </a>
 
                 <a class="mr-3" href="https://twitter.com/hotreptile18">
-                    <i class="fab fa-twitter-square text-dark"></i>
+                    <i class="fab fa-twitter-square "></i>
                 </a>
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
-                    <i class="fab fa-instagram-square text-dark"></i>
+                    <i class="fab fa-instagram-square "></i>
                 </a>
             </h3>
         </div>
