--- a/index.html
+++ b/index.html
@@ -13,30 +13,28 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity=""
         crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-    <title>About Me</title>
+    <title>Portfolio</title>
 </head>
 
-<body class="codingBackground">
+<body class="bg-dark codingBackground">
     <header class="pageBar">
         <div class="d-flex justify-content-center">
             <h1 class="py-1">Johnny Li</h1>
         </div>
     </header>
-    <nav class="pageBar font-weight-bold nav justify-content-center">
-        <a class="nav-link " href="index.html">About Me</a>
-        <a class="nav-link " href="portfolio.html">Portfolio</a>
+    <nav class="nav pageBar font-weight-bold justify-content-center">
+        <a class="nav-link " href="about.html">About Me</a>
+        <a class="nav-link " href="index.html">Portfolio</a>
     </nav>
     <main class="container">
         <article class="card mt-4 mainCard">
             <div class="card-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="card-title">About Me</h2>
+                        <h2 class=" card-title">Portfolio</h2>
                         <hr>
                     </div>
                 </div>
@@ -44,104 +42,93 @@
                     <div class="col-lg-12">
                         <div class="container">
                             <div class="row">
-                                <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard ">
+
+                                <div class=" col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
-                                            <h3 class="card-title ">Skills</h3>
-                                            <h6 class="card-subtitle ">My knowledge</h6>
+                                            <h3 class="card-title ">Covid - Can I do it?</h3>
+                                            <h6 class="card-subtitle ">Risk Assessment App</h6>
                                         </div>
-                                        <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/rainbowbrain.png" class="card-img-top"
-                                                alt="screenshot">
-                                        </div>
+                                        <a href="https://covidcanidoit.com/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/covidcanidoit.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
-                                    <div id="skillsSection" class="card-body miniCard card-bottom-radius">
-                                    </div>
+                                    <div class="card-body miniCard card-bottom-radius" style="transform: rotate(0)"><a
+                                            href="https://github.com/covidcanidoit/covidcanidoit"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
-                                <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+
+                                <div class=" col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
-                                            <h3 class="card-title ">Strengths</h3>
-                                            <h6 class="card-subtitle ">My stats</h6>
+                                            <h3 class="card-title ">Purple Pages</h3>
+                                            <h6 class="card-subtitle ">Web Entertainment App</h6>
                                         </div>
-                                        <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/kennyonlaptop.png" class="card-img-top"
-                                                alt="screenshot">
-                                        </div>
+                                        <a href="https://reptile18.github.io/Purple-Pages/index.html"
+                                            class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/purplepages.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
-                                        <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns quickly</span></li>
-                                            <li class="py-2"><i class="fas fa-users fa-2x"></i><span class="px-3">team player</span></li>
-                                            <li class="py-2"><i class="fas fa-code-branch fa-2x"></i><span class="px-3">incredibly driven</span></li>
-                                            <li class="py-2"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert bug investigator & fixer</span></li>
-                                            <li class="py-2"><i class="fas fa-globe fa-2x"></i><span class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-briefcase fa-2x"></i><span class="px-3">doesn't give up until everything looks good</span></li>
-                                        </ul>
-                                    </div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Purple-Pages"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
-                                <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+
+                                <div class="col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
-                                            <h3 class="card-title ">Personality</h3>
-                                            <h6 class="card-subtitle ">What makes me special</h6>
+                                            <h3 class="card-title ">Work Day Scheduler</h3>
+                                            <h6 class="card-subtitle ">Time Keeping App</h6>
                                         </div>
-                                        <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/portrait2.jpg" class="card-img-top"
-                                                alt="screenshot">
-                                        </div>
+                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
+                                            class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/workdayscheduler.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
-                                        <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span class="text-success font-weight-bold">G</span>BT</span></li>
-                                            <li class="py-2"><i class="fas fa-leaf fa-2x"></i><span class="px-3">longtime vegan</span></li>
-                                            <li class="py-2"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat <span class="badge badge-light">2</span> herder</span></li>
-                                            <li class="py-2"><i class="fas fa-running fa-2x"></i><span class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-dice-five fa-2x"></i><span class="px-3">board game fanatic</span></li>
-                                        </ul>
-                                    </div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Work-Day-Scheduler"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
-                                <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+
+                                <div class="col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
-                                            <h3 class="card-title ">Contact</h3>
-                                            <h6 class="card-subtitle ">How to get in touch with me</h6>
+                                            <h3 class="card-title ">Weather Dashboard</h3>
+                                            <h6 class="card-subtitle ">Local Weather App</h6>
                                         </div>
-                                        <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/portrait.jpg" class="card-img-top"
-                                                alt="screenshot">
-                                        </div>
+                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/weatherdashboard.png" class="card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
-                                        <div class="mt-3 ">
-                                            <ul class="nav">
-                                                <li class="nav-item">
-                                                    <a href="./Assets/Files/Resume.web.pdf" class="nav-link"><i
-                                                            class="fas fa-file "></i> View my
-                                                        resume</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="mailto:reptile18@gmail.com" class="nav-link"><i
-                                                            class="fas fa-envelope "></i> Email
-                                                        Me</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="tel:619-564-1623" class="nav-link"><i class="fas fa-phone "></i> Call
-                                                        Me</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Weather-Dashboard"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
-                                <div class="my-5">.</div>
+
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> <!-- card body-->
-        </article> <!-- card -->
+            </div>
+        </article>
     </main>
-    <footer class="pageBar fixed-bottom page-footer font-small ">
+    <footer class="fixed-bottom page-footer pageBar font-small ">
         <div class="d-flex justify-content-center">
             <h3 class="mt-3">
                 <a class="mr-3" href="https://github.com/reptile18">
@@ -165,92 +152,8 @@
                 </a>
             </h3>
         </div>
-        <hr>
-        <div class="footer-copyright text-center py-1">© Copyright</div>
+        <div class="footer-copyright text-center py-3">© Copyright</div>
     </footer>
-    <script type="text/Javascript">
-$(document).ready(function () {
-var skills = [
-    {
-        skill: "HTML5",
-        level: 5
-    },
-    {
-        skill: "CSS",
-        level: 5
-    },
-    {
-        skill: "Javascript",
-        level: 5
-    },
-    {
-        skill: "Bootstrap",
-        level: 3
-    },
-    {
-        skill: "Foundation",
-        level: 3
-    },
-    {
-        skill: "JQuery",
-        level: 5
-    },
-    {
-        skill: "ES6",
-        level: 3
-    },
-    {
-        skill: "Java",
-        level: 4
-    },
-    {
-        skill: "Caché",
-        level: 4
-    },
-    {
-        skill: "VB6",
-        level: 3
-    },
-    {
-        skill: "C#",
-        level: 3
-    },
-    {
-        skill: "Node.js",
-        level: 2
-    },
-    {
-        skill: "React.js",
-        level: 1
-    },
-    {
-        skill: "Vue.js",
-        level: 2
-    },
-    {
-        skill: "Python",
-        level: 1
-    },
-    {
-        skill: "GDScript",
-        level: 4
-    },
-    {
-        skill: "C++",
-        level: 1
-    }
-]
-
-function populateSkills() {
-    $.each(skills,(index,value) => {
-        let spanSkill = $("<span>").addClass("mx-1 my-1 btn btn-bg-" + index%7).text(value.skill);
-        $("#skillsSection").append(spanSkill);
-    });
-}
-populateSkills();
-
-});
-    </script>
 </body>
 
 </html>
