--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
-
+                                <div class="my-5">.</div>
                             </div>
                         </div>
                     </div>
